--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,16 @@
             width: 100%;
             height: 100%;
         }
+
+        .list-group-item a {
+            text-decoration: none;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebPlaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet">
     <style> .vjs-big-play-centered .vjs-big-play-button {
         font-size: 2.5em;
@@ -53,7 +58,7 @@
                 <button id="themeButton" class="btn btn-secondary">&#x1f319;</button>
             </div>
             <div style="margin-bottom: 20px;"></div>
-            <ul id="fileList" class="list-group mb-3" style="height: 600px; overflow-y: auto;"></ul>
+            <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
 </div>
