--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,6 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <style>
-        .row {
-            display: flex;
-        }
 
         .col-left {
             flex: 4;
@@ -24,40 +21,42 @@
         }
     </style>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>WebPlaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet">
-    <style> .vjs-big-play-centered .vjs-big-play-button {
-        font-size: 2.5em;
-        line-height: 2.3em;
-        height: 2.5em;
-        width: 2.5em;
-        border-radius: 2.5em;
-        border-width: 0.15em;
-    } </style>
+    <style>
+        .vjs-big-play-centered .vjs-big-play-button {
+            font-size: 2.5em;
+            line-height: 2.3em;
+            height: 2.5em;
+            width: 2.5em;
+            border-radius: 2.5em;
+            border-width: 0.15em;
+        } </style>
     <link rel="shortcut icon" type="image/x-icon" href="fav.png">
 </head>
 <body>
-<div class="container"><h1 class="my-4"></h1>
+<div class="container-fluid">
     <div class="row">
         <div class="col-left">
+            <div style="margin-top: 20px;"></div>
             <video id="videoPlayer" class="video-js vjs-default-skin vjs-big-play-centered" controls></video>
             <div class="input-group mt-3" style="display: flex; align-items: center;">
-                <input type="text" id="timeInput" class="form-control" placeholder="Jump to xx:xx:xx"
-                       style="flex-grow: 0.2;">
+                <input class="form-control" id="timeInput" placeholder="Jump to xx:xx:xx" type="text">
                 <button id="screenshotButton" class="btn btn-success"
                         style="flex-basis: auto; flex-grow: 0.01; flex-shrink: 1;">Screenshot
                 </button>
             </div>
         </div>
         <div class="col-right">
+            <div style="margin-top: 20px;"></div>
             <div class="button-container" style="display: flex; justify-content: space-between;">
                 <button id="backButton" class="btn btn-danger">Back</button>
                 <button id="themeButton" class="btn btn-secondary">&#x1f319;</button>
             </div>
-            <div style="margin-bottom: 20px;"></div>
+            <div style="margin-top: 20px;"></div>
             <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
