--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,8 @@
     <title>WebPlaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://vjs.zencdn.net/7.17.0/video-js.css" rel="stylesheet">
-    <style>
-        .vjs-big-play-centered .vjs-big-play-button {
-            font-size: 2.5em;
-            line-height: 2.3em;
-            height: 2.5em;
-            width: 2.5em;
-            border-radius: 2.5em;
-            border-width: 0.15em;
-        } </style>
+    <link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="fav.png">
 </head>
 <body>
@@ -42,7 +34,7 @@
     <div class="row">
         <div class="col-left">
             <div style="margin-top: 20px;"></div>
-            <video id="videoPlayer" class="video-js vjs-default-skin vjs-big-play-centered" controls></video>
+            <video class="video-js vjs-theme-forest vjs-big-play-centered" controls id="videoPlayer"></video>
             <div class="input-group mt-3" style="display: flex; align-items: center;">
                 <input class="form-control" id="timeInput" placeholder="Jump to xx:xx:xx" type="text">
                 <button id="screenshotButton" class="btn btn-success"
@@ -61,7 +53,7 @@
         </div>
     </div>
 </div>
-<script src="https://vjs.zencdn.net/7.17.0/video.min.js"></script>
+<script src="//vjs.zencdn.net/8.3.0/video.min.js"></script>
 <script src="https://unpkg.com/videojs-contrib-hls@latest/dist/videojs-contrib-hls.min.js"></script>
 <script src="https://www.unpkg.com/browse/local-storage@2.0.0/local-storage.js"></script>
 <script src="public/func.js" type="text/javascript"></script>
