--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <title>WebPlaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/video.js@8.3.0/dist/video-js.min.css" rel="stylesheet">
     <link href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="fav.png">
 </head>
@@ -53,9 +53,10 @@
         </div>
     </div>
 </div>
-<script src="//vjs.zencdn.net/8.3.0/video.min.js"></script>
-<script src="https://unpkg.com/videojs-contrib-hls@latest/dist/videojs-contrib-hls.min.js"></script>
-<script src="https://www.unpkg.com/browse/local-storage@2.0.0/local-storage.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/video.js@8.3.0/dist/video.min.js"></script>
+<!--<script src="https://unpkg.com/videojs-contrib-hls@latest/dist/videojs-contrib-hls.min.js"></script>-->
+<!--<script src="https://www.unpkg.com/local-storage@2.0.0/local-storage.js"></script>-->
+<script src="https://unpkg.com/videojs-sprite-thumbnails@2.0.0/dist/videojs-sprite-thumbnails.min.js"></script>
 <script src="public/func.js" type="text/javascript"></script>
 </body>
 </html>
