--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             flex: 1;
         }
 
-        #videoPlayer {
+        #player {
             width: 100%;
             height: 100%;
         }
@@ -25,8 +25,7 @@
     <title>WebPlaya</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/video.js@8.3.0/dist/video-js.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css" rel="stylesheet">
+    <link href="https://cdn.plyr.io/3.7.8/plyr.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="fav.png">
 </head>
 <body>
@@ -34,7 +33,7 @@
     <div class="row">
         <div class="col-left">
             <div style="margin-top: 20px;"></div>
-            <video class="video-js vjs-theme-forest vjs-big-play-centered" controls id="videoPlayer"></video>
+            <video controls id="player" playsinline></video>
             <div class="input-group mt-3" style="display: flex; align-items: center;">
                 <input class="form-control" id="timeInput" placeholder="Jump to xx:xx:xx" type="text">
                 <button id="screenshotButton" class="btn btn-success"
@@ -46,17 +45,14 @@
             <div style="margin-top: 20px;"></div>
             <div class="button-container" style="display: flex; justify-content: space-between;">
                 <button id="backButton" class="btn btn-danger">Back</button>
-                <button id="themeButton" class="btn btn-secondary">&#x1f319;</button>
+                <button class="btn btn-secondary" id="generateButton">G</button>
             </div>
             <div style="margin-top: 20px;"></div>
             <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/video.js@8.3.0/dist/video.min.js"></script>
-<!--<script src="https://unpkg.com/videojs-contrib-hls@latest/dist/videojs-contrib-hls.min.js"></script>-->
-<!--<script src="https://www.unpkg.com/local-storage@2.0.0/local-storage.js"></script>-->
-<script src="https://unpkg.com/videojs-sprite-thumbnails@2.0.0/dist/videojs-sprite-thumbnails.min.js"></script>
+<script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
 <script src="public/func.js" type="text/javascript"></script>
 </body>
 </html>
