--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,17 @@
             flex: 1;
         }
 
-        #player {
+        .plyr {
             width: 100%;
-            height: 100%;
+            height: 90%;
         }
 
         .list-group-item a {
             text-decoration: none;
+        }
+
+        .list-group {
+            white-space: normal;
         }
     </style>
     <meta charset="UTF-8">
@@ -48,7 +52,7 @@
                 <button class="btn btn-secondary" id="generateButton">G</button>
             </div>
             <div style="margin-top: 20px;"></div>
-            <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
+            <div class="list-group" id="fileList" style="width:278px;height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
 </div>
