--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <style>
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #c1c1c1;
+            border-radius: 5px;
+        }
 
         .col-left {
             flex: 4;
@@ -21,6 +29,7 @@
         }
 
         .list-group {
+            overflow-x: hidden;
             white-space: normal;
         }
     </style>
