--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>WebPlaya</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.plyr.io/3.7.8/plyr.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="fav.png">
@@ -49,18 +49,19 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-left">
-            <div style="margin-top: 20px;"></div>
-            <video controls id="player" playsinline></video>
+            <div style="margin-top: 15px;"></div>
+            <h6 class="text-center" id="title">WebPlaya</h6>
+            <video controls id="player"></video>
             <div class="input-group mt-3" style="display: flex; align-items: center;">
-                <label for="timeInput"></label><input class="form-control" id="timeInput" placeholder="Jump to xx:xx:xx"
-                                                      type="text">
+                <input class="form-control" id="timeInput" placeholder="Jump to xx:xx:xx"
+                       type="text"><label for="timeInput"></label>
                 <button id="screenshotButton" class="btn btn-success"
                         style="flex-basis: auto; flex-grow: 0.01; flex-shrink: 1;">Screenshot
                 </button>
             </div>
         </div>
         <div class="col-right">
-            <div style="margin-top: 20px;"></div>
+            <div style="margin-top: 45px;"></div>
             <div class="button-container" style="display: flex; justify-content: space-between;">
                 <button id="backButton" class="btn btn-danger">Back</button>
                 <button class="btn btn-secondary"
