--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,6 @@
     </div>
 </div>
 <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
-<script src="public/func.js" type="text/javascript"></script>
+<script src="func.js" type="text/javascript"></script>
 </body>
 </html>
