Changed the style of the modal.

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,9 @@
                     <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
                 </div>
                 <div class="modal-body">
-                    Generate video preview thumbnails, This operation requires significant computational resources,
-                    please use it during idle times.
+                    <p class="text-start">Generate video preview thumbnails, This operation requires</p>
+                    <p class="text-warning bg-dark"><strong><u>significant computational resources</u></strong></p>
+                    <p>please use it during idle times.</p>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
