--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,12 @@
                 </div>
                 <div class="modal-body">
                     <p class="text-start">Generate video preview thumbnails, This operation requires</p>
-                    <p class="text-warning bg-dark"><strong><u>significant computational resources</u></strong></p>
+                    <p class="text-warning bg-dark"><strong>significant computational resources</strong></p>
                     <p>please use it during idle times.</p>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
-                    <button class="btn btn-primary" data-bs-dismiss="modal" onclick="generateThumbnail()" type="button">
+                    <button class="btn btn-warning" data-bs-dismiss="modal" onclick="generateThumbnail()" type="button">
                         Generate
                     </button>
                 </div>
