Optimize the Dockerfile.

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         .list-group {
             overflow-x: hidden;
             white-space: normal;
+            word-wrap: break-word;
         }
 
         #generateButton {
@@ -113,7 +114,7 @@
                 </button>
             </div>
             <div style="margin-top: 20px;"></div>
-            <div class="list-group" id="fileList" style="width:278px;height: 600px; overflow-y: auto;"></div>
+            <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
 </div>
