--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,6 @@
             background-color: #c1c1c1;
             border-radius: 5px;
         }
-
-        .col-left {
-            flex: 4;
-        }
-
-        .col-right {
-            flex: 1;
-        }
-
         .plyr {
             width: 100%;
             height: 90%;
@@ -32,6 +23,7 @@
         .list-group {
             overflow-x: hidden;
             white-space: normal;
+            word-wrap: break-word;
         }
 
         #generateButton {
@@ -90,7 +82,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-left">
+        <div class="col-left" style="width: 80%;">
             <div style="margin-top: 15px;"></div>
             <h6 class="text-center" id="title">WebPlaya</h6>
             <video controls id="player"></video>
@@ -104,7 +96,7 @@
                 </button>
             </div>
         </div>
-        <div class="col-right">
+        <div class="col-right" style="width: 20%;">
             <div style="margin-top: 45px;"></div>
             <div class="button-container" style="display: flex; justify-content: space-between;">
                 <button class="btn btn-danger" id="backButton"><i class="bi bi-backspace-fill"></i> Back</button>
