--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                 </button>
             </div>
             <div style="margin-top: 20px;"></div>
-            <div class="list-group" id="fileList" style="height: 600px; overflow-y: auto;"></div>
+            <div class="list-group text-break" id="fileList" style="height: 600px; overflow-y: auto;"></div>
         </div>
     </div>
 </div>
